# music-assistant-client

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pull-request-lint.yml  release-build.yml  release-please.yml  unit-tests.yml
ma_http_client/: __init__.py  claude_tools.py  cli.py  client.py  debug.py  install_skill.py
ma_http_client/skills/music-assistant/: SKILL.md
test/: test_claude_tools.py  test_cli.py  test_client.py  test_debug_client.py
